--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -33,10 +33,8 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<!--  <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/normalize.css"> -->
-  <link href="https://fonts.googleapis.com/css?family=Lora:400,400i|Libre+Franklin:400,600,800" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/reproach.min.css" />
-  <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/bigfoot-default.min.css" />
+  <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/bigfoot-default.css" />
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/webmention.css" />
   {{- if .Site.Author.email }}
   <link rel="me" href="mailto:{{ .Site.Author.email }}" />
@@ -46,7 +44,7 @@
   <link rel="authorization_endpoint" href="https://indieauth.com/auth" />
   <link rel="webmention" href="https://webmention.herokuapp.com/api/webmention" />
   <link rel="token_endpoint" href="https://tokens.indieauth.com/token" />
-  <link rel="micropub" href="https://ascraeus.org/micropub.php" />
+  <link rel="micropub" href="https://ascraeus.org/nanopub.php" />
     
   <!-- rss feeds -->
   <link rel="alternate" type="application/rss+xml" title="Ascraeus Main Feed" href="{{ .Site.BaseURL }}index.xml" />
