--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -38,19 +38,17 @@
   {{- if .Site.Author.email }}
   <link rel="me" href="mailto:{{ .Site.Author.email }}" />
   {{- end }}
-  <!-- indieweb components 
-  ------------------------------------------------- -->
+  <!-- indieweb components -->
   <link rel="authorization_endpoint" href="https://indieauth.com/auth" />
   <link rel="webmention" href="https://webmention.herokuapp.com/api/webmention" />
   <link rel="token_endpoint" href="https://tokens.indieauth.com/token" />
   <link rel="micropub" href="https://ascraeus.org/nanopub.php" />
-    
   <!-- rss feeds -->
-  <link rel="alternate" type="application/rss+xml" title="Ascraeus Main Feed" href="{{ .Site.BaseURL }}index.xml" />
-  <link rel="alternate" type="application/rss+xml" title="Ascraeus Micropost Feed" href="{{ .Site.BaseURL }}micro/index.xml" />
+  <link rel="alternate" type="application/atom+xml" title="Ascraeus Main Feed" href="{{ .Site.BaseURL }}index.xml" />
+  <link rel="alternate" type="application/atom+xml" title="Ascraeus Micropost Feed" href="{{ .Site.BaseURL }}micro/index.xml" />
   <link rel="alternate" type="application/json" title="Ascraeus JSON feed" href="{{ .Site.BaseURL}}jsonfeed/index.json" />
   <link rel="self" href="{{ .Site.BaseURL }}" />
-  <link rel="hub" href="http://ascraeus.superfeedr.com/" />
+  <link rel="hub" href="https://switchboard.p3k.io/" />
 
   <!-- Metadata for Twitter and OpenGraph -->
   {{ partial "twittergraph.html" . }}
