--- a/layouts/page/tbr.html
+++ b/layouts/page/tbr.html
@@ -19,12 +19,4 @@
 	{{ partial "mention.html" . }}
 	{{ partial "webmention.html" }}
 	</content>
-		</section>
-	</main>
-	<footer>
-		<p class="feet h-card vcard">{{ .Site.Title }} &copy; <a href={{ .Site.BaseURL }} class="p-name u-url url author metatag" rel="me">{{ .Site.Author.name }}</a><img src="{{ .Site.BaseURL }}pictures/marvin.png" class="u-photo" style="display: none"> <a class="p-nickname u-email email metatag" rel="me" href="mailto:dgold@ascraeus.org">{{ .Site.Author.nick }}</a> 2011-{{ .Now.Format "2006" }} &bull; Licenced under <a href="{{ .Site.BaseURL }}page/licence" class="metatag">CC-BY-NC-SA</a> </p>
-	</footer>
- 	<script type="text/javascript" src="{{ .Site.BaseURL }}js/bookcurrent.js"></script>
-    <script type="text/javascript" src="{{ .Site.BaseURL }}js/booklist.js"></script>
-</body>
-</html>
+{{ partial "footer.html" . }}
