fix: forgot the javascript calls

--- a/layouts/page/tbr.html
+++ b/layouts/page/tbr.html
@@ -19,4 +19,7 @@
 	{{ partial "mention.html" . }}
 	{{ partial "webmention.html" }}
 	</content>
+	<script type="text/javascript" src="{{ .Site.BaseURL }}js/bookcurrent.js"></script>
+	<script type="text/javascript" src="{{ .Site.BaseURL }}js/booklist.js"></script>
+
 {{ partial "footer.html" . }}
