--- a/layouts/page/reading.html
+++ b/layouts/page/reading.html
@@ -19,4 +19,6 @@
 	{{ partial "mention.html" . }}
 	{{ partial "webmention.html" }}
 	</content>
+	<script type="text/javascript" src="{{ .Site.BaseURL }}js/bookcurrent.js"></script>
+    <script type="text/javascript" src="{{ .Site.BaseURL }}js/booklistread.js"></script>
 {{ partial "footer.html" . }}
