--- a/static/css/reproach.css
+++ b/static/css/reproach.css
@@ -792,6 +792,7 @@ th, tfoot {
 
 @media only screen and (min-width: 480px) and (max-width: 700px) {
 	content {
+		width: 90%;
 		margin: auto;
 	}
 
