add: added micro.blog to headers

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -49,6 +49,7 @@
   <link rel="alternate" type="application/json" title="Ascraeus JSON feed" href="{{ .Site.BaseURL}}jsonfeed/index.json" />
   <link rel="self" href="{{ .Site.BaseURL }}" />
   <link rel="hub" href="https://switchboard.p3k.io/" />
+  <link rel="me" href="https://micro.blog/dgold" />
 
   <!-- Metadata for Twitter and OpenGraph -->
   {{ partial "twittergraph.html" . }}
