Added: micro.blog Icon
Changed: Moved to a single-pane style

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -78,7 +78,7 @@
                      </svg></a>
                 {{- end }}
                 {{- if .Site.Author.microdotblog }}
-                <a href="https://micro.blog/{{ .Site.Author.microdotblog}}" rel="me" title="keybase" class="metatag">
+                <a href="https://micro.blog/{{ .Site.Author.microdotblog}}" rel="me" title="micro.blog" class="metatag">
                     <svg class="icon icon-microblog">
                          <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-microblog">
                          </use>
