FIXED: Changes to authorship mf2 markup FIXED: Caught stray end tags in index.html CHANGED: Markup for reading items

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -27,13 +27,14 @@
 			{{ partial "p_microentry.html" . }}
 			{{ else }}
 		    {{ .Content }}
-		    	</div>
 		    {{ end }}
 		    {{- if not .Title }}
 				{{ partial "micrometadata.html" . }}
 				</div>
-		    {{- end }}
-		</article>
+		    {{- else }}
+				</div>
+			</article>
+			{{- end }}
 		<hr />
 		  {{- end }}
 	</content>
