--- a/layouts/partials/metadata.html
+++ b/layouts/partials/metadata.html
@@ -26,13 +26,12 @@
 					</svg>
 				</a>&nbsp;&bull;&nbsp;
 			{{- end }}
-				<span rel="author" class="p-author h-card">
-				<a href="{{ .Site.BaseURL }}page/about" class="metatag" title="Daniel Goldsmith">	<svg class="icon">
+				<a href="{{ .Site.BaseURL }}" class="metatag u-author" title="Daniel Goldsmith">
+					<svg class="icon">
 						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-ascraeus">
 						</use> 
 					</svg>
 				</a>&nbsp;&bull;&nbsp;
-			<a href="https://brid.gy/publish/twitter"></a>
 	</div>
 	{{- else if not .Title }}
 	{{- else }}
@@ -42,13 +41,13 @@
 		{{ range .Params.tags }} 
 			<a href="/tags/{{.}}" class="metatag p-category">{{.}}</a>&nbsp;&bull;&nbsp;
 		{{- end}}
-			<span rel="author" class="p-author h-card">
-				<a href="{{ .Site.BaseURL }}" class="metatag" title="Daniel Goldsmith"><svg class="icon"><title class="name">Daniel Goldsmith</title>
-						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-ascraeus">
-						</use> 
-					</svg>
-				</a>
-			</span>&nbsp;&bull;&nbsp;
+			<a href="{{ .Site.BaseURL }}" class="metatag u-author" title="Daniel Goldsmith">
+				<svg class="icon">
+					<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-ascraeus">
+					</use> 
+				</svg>
+			</a>
+			&nbsp;&bull;&nbsp;
 			{{- if .Params.twit }}
 				<a href="{{ .Params.twit }}" class="metatag u-syndication" rel="syndication" title="this post was syndicated to twitter">
 					<svg class="icon icon-twitter">
@@ -74,7 +73,6 @@
 				</a>&nbsp;&bull;&nbsp;
 			{{- end }}			
 		~{{ .ReadingTime }} min read
-		<a href="https://brid.gy/publish/twitter"></a>
 	</div>
 	{{- end }}
 	
