--- a/layouts/section/link.html
+++ b/layouts/section/link.html
@@ -5,6 +5,7 @@
 				<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-link"></use>
 			</svg>link posts</h1>
 			<div id="#revlist">
+				<article>
 	  {{- range (.Paginate (where .Site.Pages "Section" "link")).Pages }}
 	  		{{- if .Params.link }}
 		  	<h3 class="p-name"><a href={{ .Params.link }} class="u-bookmark-of"><svg class="icon icon-link">
@@ -28,6 +29,7 @@
 		    </div>
 		    {{ partial "metadata.html" . }}
 	  	{{- end }}
+	  		</article>
 	  		</div>
 	  	{{- partial "pagination.html" . }}
 	</content>
