ADD: Likes and Reposts

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ partial "header.html" . }}
 {{ partial "sidebar.html" . }}
 	<content>{{"<!-- from index.html //-->" | safeHTML}}	
-		  {{- range first 20 (where .Data.Pages "Type" "in" (slice "article" "micro" "review" "link" )) }}
+		  {{- range first 20 (where .Data.Pages "Type" "in" (slice "article" "micro" "review" "link" "like" )) }}
 
 			{{- if .Params.link }}
 			<article class="h-entry hentry">
