--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -53,6 +53,12 @@
                          </use>
                      </svg> <span class="hidden">link posts</span></a>
                 </li>
+                <li><a href="{{ .Site.BaseURL }}like" title="likes+reposts" class="metatag">
+                    <svg class="icon icon-loop">
+                         <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-loop">
+                         </use>
+                     </svg> <span class="hidden">likes+reposts</span></a>
+                </li>
                 <li><a href="{{ .Site.BaseURL }}index.xml" title="rss feed" class="metatag">
 					<svg class="icon icon-rss">
                          <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-rss">
