--- a/layouts/partials/micrometadata.html
+++ b/layouts/partials/micrometadata.html
@@ -4,7 +4,14 @@
 		<span class="p-location">{{ .Params.checkadd }}</span>
 		{{- end }}
 		<a href="{{ .Permalink }}" class="metatag u-url u-uid p-name"><time class="dt-published" datetime="{{ .Date.Format "2006-01-02 15:04:05" }}">
-		{{- .Date.Format "02/01/06 15:04" }}</time></a>&nbsp;&bull;&nbsp;
+		{{ .Date.Format "02/01/06 15:04" }}</time></a>&nbsp;
+		{{- if .Params.like_of }}
+			(originally published on <a href="{{ .Params.like_of }}" class="metatag u-url"><time class="dt-published" datetime="{{ .Params.xPublished }}">{{ dateFormat "02/01/06 15:04" .Params.xPublished }}</time></a>)&nbsp;
+		{{- end }}
+		{{- if .Params.repost_of }}
+			(originally published on <a href="{{ .Params.repost_of }}" class="metatag u-url"><time class="dt-published" datetime="{{ .Params.xPublished }}">{{ dateFormat "02/01/06 15:04" .Params.xPublished }}</time></a>)&nbsp;
+		{{- end }}
+		&bull;&nbsp;
 				<a href="{{ .Site.BaseURL }}" class="metatag u-author" title="Daniel Goldsmith">
 					<svg class="icon">
 						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-ascraeus">
@@ -20,8 +27,8 @@
 					</svg>
 				</a>&nbsp;&bull;&nbsp;
 			{{- end }}
-			{{- if .Params.twit }}
-				<a href="{{ .Params.twit }}" class="metatag u-syndication" rel="syndication" title="this post was syndicated to twitter">
+			{{- if .Params.twitlink }}
+				<a href="{{ .Params.twitlink }}" class="metatag u-syndication" rel="syndication" title="this post was syndicated to twitter">
 					<svg class="icon icon-twitter">
 						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-twitter">
 						</use>
@@ -36,8 +43,8 @@
 					</svg>
 				</a>
 			{{- end }}
-			{{- if .Params.masto }}
-				<a href="{{ .Params.masto }}" class="metatag u-syndication" rel="syndication" title="this post was syndicated to mastodon">
+			{{- if .Params.mastodonlink }}
+				<a href="{{ .Params.mastodonlink }}" class="metatag u-syndication" rel="syndication" title="this post was syndicated to mastodon">
 					<svg class="icon icon-masto">
 						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-masto">
 						</use>
