--- a/layouts/partials/twittergraph.html
+++ b/layouts/partials/twittergraph.html
@@ -13,7 +13,9 @@
     <meta name="twitter:site" content="@AscraeusOrg" />
     <meta name="twitter:creator" content="@_dgoldsmith" />
     {{- if .Params.image }}
-      <meta name="twitter:image" content="{{ .Params.image}}" />
+    <meta name="twitter:image" content="{{ .Params.image}}" />
+    {{- else }}
+    <meta name="twitter:image" content="icon440.png" />
     {{- end }}
    <!-- Open Graph Metadata
     ================================================== -->
@@ -28,4 +30,6 @@
     <meta property="og:site_name" content="View from Ascraeus" />
     {{- if .Params.image }}
     <meta property="og:image" content="{{ .Params.image }}" />
+    {{- else }}
+    <meta property="og:image" content="icon440.png" />
     {{- end }}
