Some weird errors

--- a/layouts/partials/metadata.html
+++ b/layouts/partials/metadata.html
@@ -25,7 +25,7 @@
 						</use>
 					</svg>
 				</a>&nbsp;&bull;&nbsp;
-			{{- end }}
+			{{ end }}
 				<a href="{{ .Site.BaseURL }}" class="metatag u-author" title="Daniel Goldsmith">
 					<svg class="icon">
 						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-ascraeus">
