checkin posts fix

--- a/layouts/micro/single.html
+++ b/layouts/micro/single.html
@@ -14,7 +14,7 @@
 		    		<img src="/{{ .Params.map }}" class="map-image" height="240" width="600">
 		    		<div style="position:absolute;z-index:1;right:0;bottom:0;">
 		    			<small>
-		    				<a href="www.openstreetmap.org/copyright">© OpenStreetMap
+		    				<a href="https://www.openstreetmap.org/copyright">© OpenStreetMap
 		    				</a>
 		    			</small>
 		    		</div>
