--- a/layouts/partials/micrometadata.html
+++ b/layouts/partials/micrometadata.html
@@ -60,7 +60,7 @@
 				</a>&nbsp;&bull;&nbsp;
 			{{- end }}
 			{{- if .Params.checkin }}
-				<a href="{{ .Params.checkin }}" class="metatag u-syndication" rel="syndication" title="this post was syndicated to swarm">
+				<a href="{{ .Params.checkurl }}" class="metatag u-syndication" rel="syndication" title="this post was syndicated to swarm">
 					<svg class="icon icon-swarm">
 						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-swarm">
 						</use>
