--- a/static/css/reproach.css
+++ b/static/css/reproach.css
@@ -58,7 +58,7 @@ html {
 }
 
 body {
-    font-family: -apple-system-body, BlinkMacSystemFont, sans-serif;
+    font-family: Georgia, serif;
 	font-size: 1em;
   	line-height: 1.6111em;
  	margin: auto;
