--- a/layouts/partials/twittergraph.html
+++ b/layouts/partials/twittergraph.html
@@ -21,5 +21,5 @@
     {{- if .Params.image }}
     <meta name="twitter:image" property="og:image" content="{{ .Params.image}}" />
     {{- else }}
-    <meta name="twitter:image" property="og:image" content="icon440.png" />
+    <meta name="twitter:image" property="og:image" content="{{ .Site.BaseURL }}icon440.png" />
     {{- end }}
